--- a/ScheduleUi/MainWindow.ui
+++ b/ScheduleUi/MainWindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1054</width>
-    <height>713</height>
+    <width>1049</width>
+    <height>742</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -326,7 +326,7 @@
         </rect>
        </property>
        <property name="text">
-        <string> </string>
+        <string/>
        </property>
       </widget>
       <widget class="QLabel" name="labelSelectedFlights">
@@ -339,7 +339,7 @@
         </rect>
        </property>
        <property name="text">
-        <string> </string>
+        <string/>
        </property>
       </widget>
      </widget>
@@ -350,13 +350,29 @@
      </attribute>
     </widget>
    </widget>
+   <widget class="QProgressBar" name="progressBar">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>670</y>
+      <width>1021</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>0</number>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1054</width>
+     <width>1049</width>
      <height>21</height>
     </rect>
    </property>
