--- a/ScheduleUi/MainWindow.ui
+++ b/ScheduleUi/MainWindow.ui
@@ -423,7 +423,7 @@
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionImport">
    <property name="text">
-    <string>&amp;Import...</string>
+    <string>&amp;Import schedules...</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+I</string>
@@ -431,7 +431,7 @@
   </action>
   <action name="actionExport">
    <property name="text">
-    <string>&amp;Export...</string>
+    <string>&amp;Export schedules...</string>
    </property>
    <property name="shortcut">
     <string>Ctrl+E</string>
